--- a/_includes/main-nav.html
+++ b/_includes/main-nav.html
@@ -12,13 +12,19 @@
                 </li> 
                 <li class="">
                     <a href="http://education.unimelb.edu.au/study_with_us">Study With Us</a>          
-                    <ul> 
+                    <ul>
+                        <li class=""><a href="courses.html">Courses</a></li> 
+                        <li class=""><a href="">Financial support and scholarships</a></li> 
+                        <li class=""><a href="">Current students</a></li> 
+                        <li class=""><a href="http://education.unimelb.edu.au/study_with_us/how_to_apply">How to apply</a></li> 
+                        <!--
                         <li class=""><a href="http://education.unimelb.edu.au/study_with_us/research_degrees2"> Research degrees </a></li> 
                         <li class=""><a href="http://education.unimelb.edu.au/study_with_us/become_a_teacher"> Become a Teacher </a></li> 
                         <li class=""><a href="http://education.unimelb.edu.au/study_with_us/professional_development"> Courses for education professionals </a></li> 
                         <li class=""><a href="http://education.unimelb.edu.au/study_with_us/breadth"> Breadth </a></li> 
                         <li class=""><a href="http://education.unimelb.edu.au/study_with_us/how_to_apply"> How to apply </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/study_with_us/student_centre"> Student Centre </a></li> 
+                        <li class=""><a href="http://education.unimelb.edu.au/study_with_us/student_centre"> Student Centre </a></li>
+                        -->
                     </ul>
                 </li> 
                 <li class="">
