--- a/css/main.scss
+++ b/css/main.scss
@@ -115,6 +115,8 @@ textarea {
 
 @import "sub-site";
 
+@import "courses";
+
 
 /* ==========================================================================
    Helper classes
