--- a/_includes/main-nav.html
+++ b/_includes/main-nav.html
@@ -3,20 +3,20 @@
             <ul class="flexnav">
                 <li><a href="/">Home</a></li>
                 <li class="current">
-                    <a href="http://education.unimelb.edu.au/about_us">About us</a>
+                    <a href="/about-us/">About us</a>
                     <ul> 
-                        <li class=""><a href="http://education.unimelb.edu.au/about_us/deans_welcome"> Message from the Dean </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/about_us/staff"> Staff </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/about_us/clinical_teaching"> Clinical Teaching </a></li> 
+                        <li class=""><a href=""> Message from the Dean </a></li> 
+                        <li class=""><a href=""> Staff </a></li> 
+                        <li class=""><a href=""> Clinical Teaching </a></li> 
                     </ul>
                 </li> 
                 <li class="">
-                    <a href="http://education.unimelb.edu.au/study_with_us">Study With Us</a>          
+                    <a href="/study-with-us/index.html">Study With Us</a>          
                     <ul>
-                        <li class=""><a href="courses.html">Courses</a></li> 
+                        <li class=""><a href="/study-with-us/courses.html">Courses</a></li> 
                         <li class=""><a href="">Financial support and scholarships</a></li> 
                         <li class=""><a href="">Current students</a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/study_with_us/how_to_apply">How to apply</a></li> 
+                        <li class=""><a href="">How to apply</a></li> 
                         <!--
                         <li class=""><a href="http://education.unimelb.edu.au/study_with_us/research_degrees2"> Research degrees </a></li> 
                         <li class=""><a href="http://education.unimelb.edu.au/study_with_us/become_a_teacher"> Become a Teacher </a></li> 
@@ -28,35 +28,35 @@
                     </ul>
                 </li> 
                 <li class="">
-                    <a href="http://education.unimelb.edu.au/research">Research</a> 
+                    <a href="/research/">Research</a> 
                     <ul>
-                        <li class=""><a href="http://education.unimelb.edu.au/research/research_centres"> Research Centres </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/research/research_projects"> Research Projects </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/research/research_degrees"> Research degrees </a></li> 
+                        <li class=""><a href=""> Research Centres </a></li> 
+                        <li class=""><a href=""> Research Projects </a></li> 
+                        <li class=""><a href=""> Research degrees </a></li> 
                     </ul>
                 </li> 
                 <li class="">
-                    <a href="http://education.unimelb.edu.au/community">Community</a>
+                    <a href="/community/">Community</a>
                     <ul> 
-                        <li class=""><a href="http://education.unimelb.edu.au/community/mteach_partnership_schools"> Master of Teaching Partnership Schools </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/community/kwong_lee_dow_centre"> Kwong Lee Dow Multimedia Centre </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/community/support_us"> Support us </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/community/internship_schools"> Master of Teaching (Secondary) Internship </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/community/university_of_melbourne_network_of_schools"> University of Melbourne Network of Schools </a></li> 
+                        <li class=""><a href=""> Master of Teaching Partnership Schools </a></li> 
+                        <li class=""><a href=""> Kwong Lee Dow Multimedia Centre </a></li> 
+                        <li class=""><a href=""> Support us </a></li> 
+                        <li class=""><a href=""> Master of Teaching (Secondary) Internship </a></li> 
+                        <li class=""><a href=""> University of Melbourne Network of Schools </a></li> 
                     </ul>
                 </li> 
                 <li class="">
-                    <a href="http://education.unimelb.edu.au/news_and_activities"> News and Activities </a> 
+                    <a href="/news-and-activities/"> News and Activities </a> 
                     <ul> 
-                        <li class=""><a href="http://education.unimelb.edu.au/news_and_activities/news"> News </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/news_and_activities/shaping_minds_shaping_the_world"> Shaping minds, shaping the world </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/news_and_activities/events"> Events </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/news_and_activities/projects"> Projects </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/news_and_activities/deans_lecture_series"> Dean's Lecture Series </a></li> 
+                        <li class=""><a href=""> News </a></li> 
+                        <li class=""><a href=""> Shaping minds, shaping the world </a></li> 
+                        <li class=""><a href="/news-and-activities/events.html"> Events </a></li> 
+                        <li class=""><a href=""> Projects </a></li> 
+                        <li class=""><a href=""> Dean's Lecture Series </a></li> 
                     </ul>
                 </li> 
-                <li class="">
-                    <a href="http://education.unimelb.edu.au/contact_us">Contact us</a>
+                <li class="contact-us/">
+                    <a href="">Contact us</a>
                 </li> 
             </ul>
         </nav>
