--- a/_layouts/style-guide.html
+++ b/_layouts/style-guide.html
@@ -1,5 +1,6 @@
 {% include header-style-guide.html %}
 {% include main-nav.html %}
 {% include hero-image.html %}
+{% include content-start.html %}
 {{ content }}
 {% include footer.html %}
