--- a/_includes/sub-site-content-start.html
+++ b/_includes/sub-site-content-start.html
@@ -1,14 +1,11 @@
----
-#jekyll front matter
-
-title: Experts
-bodyClass: home
-heroImage:  http://education.unimelb.edu.au/__data/assets/image/0008/1068776/research_landing_live.jpg
----
         <div class="main-content-wrapper">
             <!-- Breadcrumbs -->
             <div role="navigation" class="breadcrumbs">
-                {% include researchCentreBreadcrumbs.html %}
+                <a href="/" rel="home">MGSE</a>
+                <span class="divider"><i class="fa fa-angle-right"></i></span>
+                <a href="">Bread</a>
+                <span class="divider"><i class="fa fa-angle-right"></i></span>
+                <a href="">Crumbs</a>
             </div>
             <!-- End breadcrumbs -->
             <div id="main-content" class="main" role='main'>
@@ -27,7 +24,3 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0008/1068776/res
                 </div>
                 
                 <h1 class="title">{{ page.title }}</h1>
-
-
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
