--- a/_layouts/sub-site.html
+++ b/_layouts/sub-site.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 {% include main-nav.html %}
 {% include hero-image.html %}
-{% include content-start.html %}
+{% include sub-site-content-start.html %}
 {{ content }}
 {% include footer.html %}
