--- a/_sass/_courses.scss
+++ b/_sass/_courses.scss
@@ -11,20 +11,21 @@
 }
 .courses .filter legend,
 .courses .filter label {
-    margin-right: 10px;
+    display: inline-block;
+    margin: 0 10px 10px 0;
     padding: 5px 8px;
     border-radius: 3px;
     &.doctors {
-        background: #B5E8B0;
+        background: #009DDC;
     }
     &.masters {
-        background: #d2f1cf;
+        background: #B7D1ED;
     }
     &.gradcert {
-        background: #C2E4FF;
+        background: #E3F3FF;
     }
     &.profcert {
-        background: #e3f3ff;
+        background: #C4C4C5;
     }
 }
 .theme {
@@ -46,6 +47,9 @@
         @media only screen and (min-width: px-to-em(600)) {
             width: 70%;
         }
+    }
+    h2 {
+        margin-bottom: 0.2em;
     }
 }
 .course-list {
@@ -73,12 +77,13 @@
     height: 100px;
     padding: 10px 12px;
     text-decoration: none;
-    background: #e3f3ff;
+    background: #C4C4C5;
     color: #444;
     border-radius: 3px;
 }
 .course-list a:hover {
-    box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5;
+    /*box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5;*/
+    box-shadow: 0 1px 3px 0 #00447C,0 0 0 1px #00447C;
 }
 .course-list small,
 .course-list span {
@@ -93,11 +98,12 @@
     font-size: 0.9em;
 }
 .course-list a[data-courselevel="doctorate"] {
-    background: #B5E8B0;
+    background: #FFFFFF;
+    border: 1px solid #009DDC;
 }
 .course-list a[data-courselevel="master"] {
-    background: #d2f1cf;
+    background: #B7D1ED;
 }
 .course-list a[data-courselevel="gradcert"] {
-    background: #C2E4FF;
+    background: #E3F3FF;
 }
