--- a/_sass/_mgse-components.scss
+++ b/_sass/_mgse-components.scss
@@ -520,3 +520,16 @@ ul.tabs {
         margin-left: 20%;
     }
 }
+
+/*
+ * alert
+ */
+.alert {
+    max-width: 700px;
+    margin: 8em auto;
+    text-align: center;
+    border: 1px solid #009DDC;
+    border-radius: 3px;
+    padding: 20px;
+    box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5;
+}
