--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
         
         <!-- MGSE javascript -->  
         <script src="/js/plugins-min.js"></script>
-        <script src="/js/main-min.js"></script>
+        <script src="/js/main.js"></script>
         <script src="/js/banner-roller.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
