--- a/_sass/_courses.scss
+++ b/_sass/_courses.scss
@@ -51,6 +51,16 @@
     h2 {
         margin-bottom: 0.2em;
     }
+    &.border-bottom {
+        padding-bottom: 4em;
+        margin-bottom: 4em;
+        border-bottom: 1px solid #ccc;
+    }
+    &.border-top {
+        padding-top: 4em;
+        margin-top: 4em;
+        border-top: 1px solid #ccc;
+    }
 }
 .course-list {
     max-width: 820px;
@@ -66,9 +76,9 @@
     list-style: none;
     display: block;
     float: left;
-    margin: 0 4px 4px 0;
     font-size: 1.1em;
     font-weight: bold;
+    margin: 0;
 }
 .course-list a {
     border-bottom: none;
@@ -76,6 +86,7 @@
     width: 200px;
     height: 100px;
     padding: 10px 12px;
+    margin: 0 4px 4px 0;
     text-decoration: none;
     background: #C4C4C5;
     color: #444;
