--- a/_sass/_mgse-components.scss
+++ b/_sass/_mgse-components.scss
@@ -134,6 +134,13 @@ figure {
         width: 100%;
         max-width: 588px;
     }
+    &.centered {
+        margin: 0 auto;
+    }
+    &.extra-vspace {
+        margin-top: 4em;
+        margin-bottom: 4em;
+    }
 }
 .article figure {
     @include breakpoint(medium-up) {
@@ -159,6 +166,18 @@ figure {
 }
 .side-bar figure {
     @include fill-parent;
+    &.left, &.right {
+        width: auto;
+    }
+    &.left {
+        float: left;
+        margin-right: $gutter;
+    }
+    &.right {
+        float: right;
+        @include omega();
+        margin-left: $gutter;
+    }
 }
 .col-1of2 figure,
 .col-2of2 figure {
