style guide update

--- a/_includes/style-guide-css.html
+++ b/_includes/style-guide-css.html
@@ -16,7 +16,7 @@
         border-radius: .4em;
         border: 1px solid #efe8d5;
         margin: 1em 0;
-        overflow: visible;
+        overflow: scroll;
         padding: 1em 2em;
         white-space: pre;
         word-wrap: normal;
