--- a/css/main.scss
+++ b/css/main.scss
@@ -110,7 +110,7 @@ textarea {
 @import "mgse-typography";
 @import "mgse-components";
 @import "mgse-events";
-
+@import "mgse-news-sort";
 @import "carousel";
 
 @import "sub-site";
