fix courses filter etc

--- a/_includes/main-nav.html
+++ b/_includes/main-nav.html
@@ -13,10 +13,10 @@
                 <li class="">
                     <a href="/study-with-us/index.html">Study With Us</a>          
                     <ul>
-                        <li class=""><a href="/study-with-us/courses.html">Courses</a></li> 
-                        <li class=""><a href="">Financial support and scholarships</a></li> 
-                        <li class=""><a href="">Current students</a></li> 
+                        <li class=""><a href="/study-with-us/courses/">Courses</a></li> 
+                        <li class=""><a href="">Financial support and scholarships</a></li>
                         <li class=""><a href="">How to apply</a></li> 
+                        <li class=""><a href="/study-with-us/students/">Students</a></li> 
                         <!--
                         <li class=""><a href="http://education.unimelb.edu.au/study_with_us/research_degrees2"> Research degrees </a></li> 
                         <li class=""><a href="http://education.unimelb.edu.au/study_with_us/become_a_teacher"> Become a Teacher </a></li> 
