--- a/css/main.scss
+++ b/css/main.scss
@@ -110,12 +110,10 @@ textarea {
 @import "mgse-typography";
 @import "mgse-components";
 @import "mgse-events";
-
 @import "carousel";
-
 @import "sub-site";
-
 @import "courses";
+@import "helper-classes";
 
 
 /* ==========================================================================
