--- a/_sass/_mgse-components.scss
+++ b/_sass/_mgse-components.scss
@@ -586,6 +586,9 @@ ul.tabs {
     padding: 20px;
     box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5;
 }
+.side-bar .alert {
+    margin: 0 auto 2em auto;
+} 
 
 /*
  * comparison
