more study with us updates

--- a/_includes/main-nav.html
+++ b/_includes/main-nav.html
@@ -14,17 +14,9 @@
                     <a href="/study-with-us/index.html">Study With Us</a>          
                     <ul>
                         <li class=""><a href="/study-with-us/courses/">Courses</a></li> 
-                        <li class=""><a href="">Financial support and scholarships</a></li>
-                        <li class=""><a href="">How to apply</a></li> 
-                        <li class=""><a href="/study-with-us/students/">Students</a></li> 
-                        <!--
-                        <li class=""><a href="http://education.unimelb.edu.au/study_with_us/research_degrees2"> Research degrees </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/study_with_us/become_a_teacher"> Become a Teacher </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/study_with_us/professional_development"> Courses for education professionals </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/study_with_us/breadth"> Breadth </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/study_with_us/how_to_apply"> How to apply </a></li> 
-                        <li class=""><a href="http://education.unimelb.edu.au/study_with_us/student_centre"> Student Centre </a></li>
-                        -->
+                        <li class=""><a href="/study-with-us/financial-support-and-scholarships/">Financial support and scholarships</a></li>
+                        <li class=""><a href="/study-with-us/how-to-apply/">How to apply</a></li> 
+                        <li class=""><a href="/study-with-us/students/">Students</a></li>
                     </ul>
                 </li> 
                 <li class="">
