--- a/_sass/_courses.scss
+++ b/_sass/_courses.scss
@@ -63,7 +63,7 @@
     max-width: 820px;
     padding: 0;
     margin: 0 auto;
-    list-style: noen;
+    list-style: none;
 }
 .course-list > li {
     background-image: none;
@@ -142,7 +142,7 @@
             display: block;
         }
     }
-    transition: transform 0.5s ease;
+    transition: transform 0.5s ease-in;
 }
 
 /*
