--- a/_sass/_courses.scss
+++ b/_sass/_courses.scss
@@ -1,6 +1,9 @@
 
 .courses {
     margin-bottom: 4em;
+    &.highlight {
+        padding-top: 1em;
+    }
 }
 .courses .filter {
     margin-top: 4em;
