--- a/_sass/_courses.scss
+++ b/_sass/_courses.scss
@@ -88,10 +88,8 @@
 .course-list a {
     border-bottom: none;
     display: block;
-    /*width: 200px;
-    height: 100px;*/
-    width: 200/(16*1.1)*1em;
-    height: 100/(16*1.1)*1em;
+    width: 200/(16*1.1)*1em; /* 200px 1.1 is font size inherited from li */
+    height: 100/(16*1.1)*1em; /* 100px 1.1 is font size inherited from li */
     padding: 10px 12px;
     margin: 0 4px 4px 0;
     text-decoration: none;
