style guide updates

--- a/_includes/style-guide-css.html
+++ b/_includes/style-guide-css.html
@@ -9,6 +9,7 @@
     }
     h2.style-guide {
         border-bottom: 2px solid #eee;
+        margin-top: 2em;
     }
     pre {
         position: relative;
