--- a/_layouts/style-guide.html
+++ b/_layouts/style-guide.html
@@ -2,5 +2,6 @@
 {% include main-nav.html %}
 {% include hero-image.html %}
 {% include content-start.html %}
+{%include  style-guide-nav.html %}
 {{ content }}
 {% include footer.html %}
