--- a/_sass/_courses.scss
+++ b/_sass/_courses.scss
@@ -65,6 +65,7 @@
     }
 }
 .course-list {
+    @include clearfix;
     max-width: 820px;
     padding: 0;
     margin: 0 auto;
@@ -121,6 +122,10 @@
     background: #E3F3FF;
 }
 
+.course-list.extra {
+    margin: 2em auto;
+    max-width: 100%;
+}
 .course-list.extra li {
     position: relative;
     width: 204px;
