Adding Event cards
Adding in Event cards in to CSS styles as separate component. Can also
be used in conjunction with News items

--- a/css/main.scss
+++ b/css/main.scss
@@ -112,11 +112,9 @@ textarea {
 @import "mgse-events";
 @import "mgse-news-sort";
 @import "carousel";
-
 @import "sub-site";
-
 @import "courses";
-
+@import "mgse-cards";
 
 /* ==========================================================================
    Helper classes
