--- a/_sass/_mgse-cards.scss
+++ b/_sass/_mgse-cards.scss
@@ -1,29 +1,32 @@
-.cards
+.item-cards
 {
-	text-align:center;   
+	text-align:center;  
+		li a
+		{ 
+		height:100%;
+		border-bottom: 0;
+		display:block;
+		color:#333333;
+		position:absolute;
+		top:0;
+	}
+	&:hover {
+		box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5, 0px 2px 8px 0px rgba(0,0,0,0.2);
+		transform:scale(1.05);
+	}
 }
 
-.cards li a
-{
-	height:100%;
-	border-bottom: 0;
-	display:block;
-	color:#333333;
-	position:absolute;
-	top:0;
+
+.item-cards li:hover{
+	
 }
 
-.cards li:hover{
-	box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5, 0px 2px 8px 0px rgba(0,0,0,0.2);
-	transform:scale(1.05);
-}
-
-.card-thumb, .card-thumb::before, .card-content h3, .cards, .cards li a
+.item-card-thumb, .item-card-thumb::before, .item-card-content h3, .item-cards, .item-cards li a
 {
 	 width: 100%;
 }
 
-.card-thumb
+.item-card-thumb
 {
 	height: 150px;
 	background-size: cover;
@@ -32,7 +35,7 @@
 	bottom:70px;
 }
 
-.card-thumb::before
+.item-card-thumb::before
 {
 	height: 4rem;
 	margin-top: -4rem;
@@ -42,20 +45,20 @@
 	display: block;
 }
 
-.card-content
+.item-card-content
 {
 	width:289px;
 	box-sizing:border-box;
 	padding:0 14px 0 14px;
 }
 
-.card-content time
+.item-card-content time
 {
 	line-height:30px;
 	margin-bottom:10px;
 }
 
-.card-content h3
+.item-card-content h3
 {
 	margin:15px 0 10px 0;
 	font-weight:normal;
@@ -63,13 +66,13 @@
 	color:#005596;
 }
 
-.card-body
+.item-card-body
 {
 	font-size:16px;
 	line-height:20px;
 }
 
-.cards .category
+.item-cards .category
 {
 	display: block;
 	float:right;
@@ -78,19 +81,19 @@
 	margin-right:14px;
 }
 
-.card-title
+.item-card-title
 {
 	line-height:24px;
 }
 
-.cards .tags
+.item-cards .tags
 {
 	max-width: 200px;
 	float: left;
 	margin-left:14px;
 }
 
-.card-meta
+.item-card-meta
 {
 	height:70px;
 	max-height: 90px;
@@ -106,7 +109,7 @@
 	width:100%;
 }
 
-.card-body
+.item-card-body
 {
 	overflow-y:hidden;
 	max-height:100%;
@@ -115,7 +118,7 @@
 	line-height:20px;
 }
 
-.cards li
+.item-cards li
 {
 	box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5;
 	list-style-type: none;
@@ -134,24 +137,24 @@
 	position:relative;
 }
 
-.cards li .card-content:last-child
+.item-cards li .item-card-content:last-child
 {
 	position:absolute;
 	bottom:0;
 }
 
-.cards li:nth-child(4n)
+.item-cards li:nth-child(4n)
 {
 	margin-right: 0;
 }
 
 @media(max-width:1262px)
 {
-	.cards li:nth-child(4n)
+	.item-cards li:nth-child(4n)
 	{
 		margin-right:20px;
 	}
-	.cards li:nth-child(3n)
+	.item-cards li:nth-child(3n)
 	{
 		margin-right:0;
 	}
@@ -159,19 +162,19 @@
 
 @media(max-width:953px)
 {
-	.cards li:nth-child(3n)
+	.item-cards li:nth-child(3n)
 	{
 		margin-right:20px;
 	}
-	.cards li:nth-child(2n)
+	.item-cards li:nth-child(2n)
 	{
 		margin-right:0;
 	}
-	.cards li
+	.item-cards li
 	{
 		width:48%
 	}
-	.card-content
+	.item-card-content
 	{
 		width:100%;
 	}
@@ -179,11 +182,11 @@
 
 @media(max-width:624px)
 {
-	.cards li:nth-child(3n)
+	.item-cards li:nth-child(3n)
 	{
 		margin-right:0;
 	}
-	.cards li
+	.item-cards li
 	{
 		margin-left:0;
 		margin-right:0;
