--- a/_sass/_mgse-navigation.scss
+++ b/_sass/_mgse-navigation.scss
@@ -17,7 +17,8 @@
 /*
  * Level 2 page preview
  */
-.page-preview {
+.page-preview,
+.preview-vertical {
     h2 {
         border-bottom: 2px solid $web-blue;
     }
@@ -67,9 +68,6 @@
  * Sub-site home page vertical page preview
  */
 .preview-vertical {
-    .group-heading {
-        border-bottom: 2px solid $web-blue;
-    }
     div {
         @include clearfix;
         clear: both;
