--- a/_sass/_mgse-typography.scss
+++ b/_sass/_mgse-typography.scss
@@ -45,14 +45,6 @@ h2 {
         margin-bottom: 1.04167em;
     }
 }
-.article {
-    > h2 {
-        margin-top: 3em;
-    }
-    > h2:first-child {
-        margin-top: 0;
-    }
-}
 .side-bar h2 {
     font-size: 0.9 * 1.24em;
     @include breakpoint (medium-up) {
@@ -91,7 +83,7 @@ h4 {
 }
 h5 {
     font-size: 0.9 * 1em;
-    font-weight: bold;
+    font-weight: normal;
     line-height: 1.5;
     margin-bottom: 1.5em;
     @include breakpoint (medium-up) {
