--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,4 +3,5 @@
 {% include hero-image.html %}
 {% include content-start.html %}
 {{ content }}
+{% include content-end.html %}
 {% include footer.html %}
