--- a/_layouts/style-guide.html
+++ b/_layouts/style-guide.html
@@ -4,4 +4,5 @@
 {% include content-start.html %}
 {%include  style-guide-nav.html %}
 {{ content }}
+{% include content-end.html %}
 {% include footer.html %}
