--- a/_sass/_mgse-navigation.scss
+++ b/_sass/_mgse-navigation.scss
@@ -1,4 +1,4 @@
-/* === COMPONENTS === */
+/* === NAVIGATION === */
 
 /*
  * Breadcrumbs
@@ -9,9 +9,6 @@
         border-bottom: none;
         font-size: 0.9em;
     }
-}
-.mgse.home .breadcrumbs {
-    visibility: hidden;
 }
 
 /*
