--- a/_layouts/home-page.html
+++ b/_layouts/home-page.html
@@ -1,7 +1,6 @@
 {% include header.html %}
 {% include main-nav.html %}
 {% include hero-image.html %}
-{% include sub-site-content-start.html %}
+<h1 class="title">{{ page.title }}</h1>
 {{ content }}
-{% include content-end.html %}
 {% include footer.html %}
