--- a/_sass/_mgse-components.scss
+++ b/_sass/_mgse-components.scss
@@ -236,7 +236,7 @@ figcaption {
 
 /*
  * Content promo
- */
+ 
 .promo {
     background: $web-sky-blue;
     padding: 1em;
@@ -257,6 +257,7 @@ figcaption {
         background: rgb(196, 196, 197);
     }
 }
+*/
 
 /*
  * Homepage nav
@@ -488,32 +489,46 @@ ul.tabs {
  */
 .card {
     position: relative;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
     box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5;
     padding-bottom: $gutter;
-    header {
-        background: #f1f1f1;
-    }
-    img {
+    background-color: #fff;
+    height: 400/16*1em;
+    max-width: 320px;
+    overflow: hidden;
+    &:after {
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        content: ' ';
         display: block;
-        max-height: 142px;
-        margin: 0 auto;
+        height: 80px;
+        height: 7rem;
+        background: linear-gradient(0deg,#fff 50%,hsla(0,0%,100%,0));
+        width: 100%;
+    }
+    header {
+        img {
+            max-height: inherit;
+            width: 100%;
+            position: absolute;
+            overflow: hidden;
+        }
     }
     .card-main {
-        padding: $gutter/2 $gutter/2 0 $gutter/2;
+        color: #444;
+        margin: 0.5em 1em;
     }
-    h2,h3,h4,h5,h6 {
-        font-size: 1em;
-        line-height: 1.5;
-        color: $web-blue;
-        margin-bottom: 1em;
+    h2, h3 {
+        font-weight: 300;
+        font-size: 18/16*1em;
+        line-height: 1.4;
     }
     p {
         font-size: 0.9 * 1em;
     }
     footer {
         position: absolute;
+        z-index: 1;
         bottom: 0;
         width: 100%;
         text-align: right;
@@ -535,6 +550,158 @@ ul.tabs {
     &.highlight {
         background: $web-sky-blue;
     }
+}
+.news.card,
+.event.card {
+    height: 440/16*1em;
+    a {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        &.external:hover:before {
+            content: "hello;";
+        }
+    }
+    footer {
+        color: #444;
+        text-align: left;
+        p {
+            font-size: 12/16*1em;
+            margin: 0;
+            padding: 1em 0 0 0;
+            border-top: 1px solid $text-color;
+            text-transform: uppercase;
+        }
+        .meta-right {
+            float: right;
+        }
+    }
+    transition: transform 0.25s ease-in-out;
+    &:hover {
+        box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5, 0px 2px 8px 0px rgba(0,0,0,0.2);
+        transform: scale(1.05);
+    }
+}
+.news.card {
+    background-color: #fff;
+    max-width: 320px;
+    overflow: hidden;
+    &:after {
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        content: ' ';
+        display: block;
+        height: 80px;
+        height: 7rem;
+        background: linear-gradient(0deg,#fff 50%,hsla(0,0%,100%,0));
+        width: 100%;
+    }
+    header {
+        background-color: #f1f1f1;
+        position: relative;
+        padding-bottom: 2/3*100%;
+        &:before {
+            content: "MGSE";
+            font-size: 2em;
+            line-height: 1;
+            letter-spacing: -1px;
+            color: #D6D6D6;
+            display: block;
+            height: 1em;
+            position: absolute;
+            top: 0;
+            right:0;
+            bottom: 0;
+            left: 0;
+            margin: auto;
+            text-align: center;
+        }
+    }
+
+    .card-main {
+        color: #444;
+        margin: 0.5em 1em;
+        h3 {
+            font-weight: 300;
+            font-size: 18/16*1em;
+            line-height: 1.4;
+        }
+    }
+    footer {
+        color: #444;
+        z-index: 1;
+        padding: 0 0.8em 1em 0.8em;
+        text-align: left;
+        p {
+            font-size: 12/16*1em;
+            margin: 0;
+            padding: 1em 0 0 0;
+            border-top: 1px solid $text-color;
+            text-transform: uppercase;
+        }
+        .meta-right {
+            float: right;
+        }
+    }
+}
+.event.card {
+    header {
+        background-color: #fff;
+        margin: 1em 1em 1.5em 1em;
+        .when {
+            font-size: 18/16*1em;
+            margin: 0;
+        }
+        time {
+            display: block;
+            font-size: 28/18*1em;
+        }
+    }
+    .card-main {
+        .profile {
+            figure {
+                width: 30%;
+                margin: 0;
+            }
+            .details {
+                width: 70%;
+                padding: 0 0 0 $gutter/2;
+                h2, h3, h4, h5, p {
+                    font-size: 14/16*1em;
+                }
+            }
+        }
+    }
+}
+.project.card {
+    header {
+        background-color: #f1f1f1;
+        position: relative;
+        padding-bottom: 1/2*100%;
+        &:before {
+            content: "MGSE";
+            font-size: 2em;
+            line-height: 1;
+            letter-spacing: -1px;
+            color: #D6D6D6;
+            display: block;
+            height: 1em;
+            position: absolute;
+            top: 0;
+            right:0;
+            bottom: 0;
+            left: 0;
+            margin: auto;
+            text-align: center;
+        }
+        footer {
+            text-align: right;
+        }
+    }
+    
 }
 
 /*
