--- a/_sass/_mgse-components.scss
+++ b/_sass/_mgse-components.scss
@@ -491,6 +491,7 @@ ul.tabs {
     position: relative;
     box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5;
     padding-bottom: $gutter;
+    margin-bottom: 2em;
     background-color: #fff;
     height: 400/16*1em;
     max-width: 320px;
