--- a/_sass/_home-page.scss
+++ b/_sass/_home-page.scss
@@ -97,7 +97,8 @@
 
 .home section {
     .content-wrapper {
-        padding: 2em 1em 4em 1em;
+        position: relative;
+        padding: 2em 1em 2em 1em;
     
         > h2 {
             text-align: center;
@@ -111,6 +112,9 @@
         background: $web-sky-blue;
     }
     .more-link {
+        position: absolute;
+        right: 1em;
+        bottom: 2em;
         max-width: 100%;
         text-align: right;
         margin-bottom: 0;
@@ -120,15 +124,24 @@
 
 .promos {
     display: flex;
+    flex-wrap: wrap;
     @include outer-container;
 }
 
 .promo,
 .promo-links {
+    width: 100%;
+    margin-right: 0;
+    @media only screen and (min-width: 400px) {
+        @include span-columns(6 of 12);
+    }
+    @media only screen and (min-width: 900px) {
+        @include span-columns(3 of 12);
+    }
     background-color: #fff;
-    @include span-columns(3 of 12);
     min-height: 340px;
     box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5;
+    margin-bottom: 2em;
 }
 .promo {
     position: relative;
@@ -168,7 +181,11 @@
     }
 }
 .double.promo {
-    @include span-columns(6 of 12);
+    width: 100%;
+    margin-right: 0;
+    @media only screen and (min-width: 900px) {
+        @include span-columns(6 of 12);
+    }
     background-repeat: no-repeat;
     background-size: cover;
     .text {
