--- a/_sass/_mgse-components.scss
+++ b/_sass/_mgse-components.scss
@@ -517,7 +517,12 @@ ul.tabs {
     }
     .card-main {
         color: #444;
-        margin: 0.5em 1em;
+        margin: $gutter/2;
+        h3 {
+            font-weight: 300;
+            font-size: 18/16*1em;
+            line-height: 1.4;
+        }
     }
     h2, h3 {
         font-weight: 300;
@@ -554,16 +559,13 @@ ul.tabs {
 }
 .news.card,
 .event.card {
-    height: 440/16*1em;
     a {
         position: absolute;
         top: 0;
         left: 0;
         right: 0;
         bottom: 0;
-        &.external:hover:before {
-            content: "hello;";
-        }
+        border-bottom: 1px solid transparent;
     }
     footer {
         color: #444;
@@ -582,7 +584,9 @@ ul.tabs {
     transition: transform 0.25s ease-in-out;
     &:hover {
         box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5, 0px 2px 8px 0px rgba(0,0,0,0.2);
-        transform: scale(1.05);
+        /*transform-origin: 50% 50%;
+        transform: scale(1.05);*/
+        
     }
 }
 .news.card {
@@ -619,16 +623,6 @@ ul.tabs {
             left: 0;
             margin: auto;
             text-align: center;
-        }
-    }
-
-    .card-main {
-        color: #444;
-        margin: 0.5em 1em;
-        h3 {
-            font-weight: 300;
-            font-size: 18/16*1em;
-            line-height: 1.4;
         }
     }
     footer {
