--- a/_sass/_mgse-components.scss
+++ b/_sass/_mgse-components.scss
@@ -527,6 +527,7 @@ ul.tabs {
     h2, h3 {
         font-weight: 300;
         font-size: 18/16*1em;
+        margin-bottom: 0.8em;
         line-height: 1.4;
     }
     p {
@@ -584,8 +585,8 @@ ul.tabs {
     transition: transform 0.25s ease-in-out;
     &:hover {
         box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5, 0px 2px 8px 0px rgba(0,0,0,0.2);
-        /*transform-origin: 50% 50%;
-        transform: scale(1.05);*/
+        transform-origin: 50% 50%;
+        transform: scale(1.05);
         
     }
 }
