--- a/_sass/_mgse-typography.scss
+++ b/_sass/_mgse-typography.scss
@@ -148,6 +148,7 @@ a:hover {
     border-bottom: none;
     color: $web-10-blue;
 }
+.pointer,
 a.pointer {
     border-bottom: none;
     &:after {
