--- a/_sass/_home-page.scss
+++ b/_sass/_home-page.scss
@@ -17,7 +17,10 @@
     max-height: 325px;
     .content-wrapper {
         padding: 20/16*1em;
-        padding: 5vw;
+        padding: 20vw 5vw;
+        @media only screen and (min-width: 550px) {
+            padding: 5vw;
+        }
         @media only screen and (min-width: 1250px) {
             padding: 5em;
         }
@@ -33,7 +36,7 @@
         p {
             font-size: 1.2em;
             font-size: 5vw;
-            font-weight: 400;
+            font-weight: 100;
             line-height: 1.2;
             text-align: center;
             max-width: 100%;
@@ -52,6 +55,7 @@
             cite {
                 font-size: 24/16*1em;
                 font-size: 2vw;
+                font-weight: 100;
                 color: #fff;
                 &:before {
                     content: "\2014";
@@ -150,8 +154,19 @@
 .promo {
     position: relative;
     overflow: hidden;
+    header {
+        max-height: 50%;
+        overflow: hidden;
+        img {
+            width: 100%;
+        }
+    }
     .text {
         padding: 0.5em 1em;
+    }
+    p {
+        max-width: 100%;
+        font-size: 0.9 * 1em;
     }
     h3 {
         font-weight: 300;
@@ -165,11 +180,8 @@
         width: 100%;
         bottom: 1em;
         text-align: right;
-        a {
-            margin-right: 1em;
-            color: #fff;
-            border-bottom-color: #fff;
-        }
+        padding-right: 1em;
+        color: #fff;
     }
     &:after {
         content: "";
@@ -182,6 +194,13 @@
         position: absolute;
         bottom: 0;
         right: 0;
+    }
+    transition: transform 0.25s ease-in-out;
+    &:hover {
+        box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5, 0px 2px 8px 0px rgba(0,0,0,0.2);
+        transform-origin: 50% 50%;
+        transform: scale(1.05);
+        
     }
 }
 .double.promo {
@@ -238,6 +257,63 @@
                     content: '\2192';
                 }
             }
+            &:hover {
+                background: $web-sky-blue;
+            }
+        }
+    }
+}
+
+
+
+/*
+ * Homepage nav
+ */
+.home h3 a {
+    border-bottom: none;
+        &:hover {
+            border-bottom: 1px solid #0072c9;
+        }
+}
+#main-content .home-in-page-nav {
+    @include breakpoint(medium-only-portrait-up) {
+        @include span-columns(9 of 12);
+    }
+    h3 {
+        border-bottom: 2px solid #2D71B3;
+    }
+    li {
+        padding-left: 1em;
+        background-position: 0 0.5em;
+    }
+    a {
+        border-bottom: none;
+        &:hover {
+            border-bottom: 1px solid #0072c9;
+        }
+    }
+}
+#main-content .home-side-bar {
+    @include breakpoint(medium-only-portrait-up) {
+        clear: none;
+        @include span-columns(3 of 12);
+        @include omega();
+    }
+    h3 {
+        border-bottom: 2px solid #2D71B3;
+    }
+    .news-wrap {
+        margin: 1em 0;
+        border-bottom: 1px solid #BFCCE2;
+        a {
+            border-bottom: none;
+            &:hover {
+                border-bottom: 1px solid #0072c9;
+            }
+        }
+        .time-stamp {
+            text-transform: uppercase;
+            font-size: 0.732em;
         }
     }
 }
