--- a/_sass/_mgse-events.scss
+++ b/_sass/_mgse-events.scss
@@ -1,3 +1,20 @@
+/*
+ * event - asset display format
+ */
+.event {
+    @include clearfix;
+    padding-bottom: 1em;
+    margin-bottom: 2em;
+    width: 100%;
+    .details {
+        float: left;
+        width: 20%;
+        padding-right: $gutter/2;
+    }
+    .description {
+        margin-left: 20%;
+    }
+}
 /** Events page filtering **/ 
 #main-content .filters-nav__list { 
     display: block; 
