--- a/css/main.scss
+++ b/css/main.scss
@@ -113,6 +113,8 @@ textarea {
 @import "mgse-tables";
 @import "mgse-figures";
 @import "mgse-video";
+@import "mgse-wells";
+@import "mgse-content-promo";
 @import "mgse-tabs";
 @import "mgse-accordion";
 @import "mgse-readmore";
