--- a/_sass/_home-page.scss
+++ b/_sass/_home-page.scss
@@ -76,6 +76,7 @@
         padding: 1em;
     }
     p {
+        font-size: 1.2em;
         margin: 0;
         color: $web-sky-blue;
         text-align: center;
@@ -129,142 +130,84 @@
         font-size: 14/16*1em;
     }
 }
-
+/*
+ * layout container for home page promotions
+ */
 .promos {
     display: flex;
     flex-wrap: wrap;
     @include outer-container;
-}
-
-.promo,
-.promo-links {
-    width: 100%;
-    margin-right: 0;
-    @media only screen and (min-width: 400px) {
-        @include span-columns(6 of 12);
-    }
-    @media only screen and (min-width: 900px) {
-        @include span-columns(3 of 12);
-    }
-    background-color: #fff;
-    min-height: 340px;
-    box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5;
-    margin-bottom: 2em;
-}
-.promo {
-    position: relative;
-    overflow: hidden;
-    header {
-        max-height: 50%;
-        overflow: hidden;
-        img {
-            width: 100%;
-        }
-    }
-    .text {
-        padding: 0.5em 1em;
-    }
-    p {
-        max-width: 100%;
-        font-size: 0.9 * 1em;
-    }
-    h3 {
-        font-weight: 300;
-        font-size: 18/16*1em;
-        line-height: 1.4;
-    }
-    .cta {
-        margin: 0;
-        position: absolute;
-        z-index: 1;
+    .promotion,
+    .promotion-links {
         width: 100%;
-        bottom: 1em;
-        text-align: right;
-        padding-right: 1em;
-        color: #fff;
-    }
-    &:after {
-        content: "";
-        display: block;
-        width: 0;
-        height: 0;
-        border-top: 76px solid transparent;
-        border-bottom: 0px solid transparent;
-        border-right: 280px solid rgba(1,68,126,0.8);
-        position: absolute;
-        bottom: 0;
-        right: 0;
-    }
-    transition: transform 0.25s ease-in-out;
-    &:hover {
-        box-shadow: 0 1px 3px 0 #d4d4d5,0 0 0 1px #d4d4d5, 0px 2px 8px 0px rgba(0,0,0,0.2);
-        transform-origin: 50% 50%;
-        transform: scale(1.05);
-        
-    }
-}
-.double.promo {
-    width: 100%;
-    margin-right: 0;
-    @media only screen and (min-width: 900px) {
-        @include span-columns(6 of 12);
-    }
-    background-repeat: no-repeat;
-    background-size: cover;
-    .text {
-        position: absolute;
-        width:100%;
-        top: 50%;
-        transform: translateY(-50%);
-        text-align: center;
-        h3, h4, h5, h6, p, a {
-        color: #fff;
-        }
-        h3 {
-            font-size: 60/16*1em;
-        }
-        p {
-            font-size: 28/16*1em;
-        }
-    }
-}
-.promo-links {
-    ul {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        margin: 0;
-        li {
-            font-weight: 500;
-            padding: 0;
-            margin: 0;
-            list-style: none;
-            background-image: none;
-            flex: 1; /* shorthand for flex-grow: 1; flex-shrink: 1; flex-basis: auto; - stretches evenly across height; */
-            /* now center content within li */
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            border-bottom: 1px solid #d4d4d5;
-            &:last-child {
-                border-bottom: none;
+        @media only screen and (min-width: 400/16*1em) {
+            @include span-columns(6 of 12);
+            &:nth-child(2) {
+                @include omega;
             }
-            a {
-                border: none;
-                padding: 0 1em;
-                &:after {
-                    padding-left: .625rem;
-                    content: '\2192';
+        }
+        @media only screen and (min-width: 900/16*1em) {
+            @include span-columns(3 of 12);
+            &:nth-child(2) {
+                margin-right: flex-gutter();
+                clear: none;
+            }        
+        }
+    }
+    .double.promotion {
+        width: 100%;
+        margin-right: 0;
+        &+ .promotion {
+            margin-right: flex-gutter();
+            clear: none;
+        }
+        @media only screen and (min-width: 900/16*1em) {
+            @include span-columns(6 of 12);
+        }
+    }
+}
+/*
+ * layout container for news and project cards
+ */
+.col-4max-cards {
+    @include clearfix;
+    margin-bottom: 2em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    .card {
+        font-size: 80%;
+        height: 350/16*1em;
+        margin-bottom: 1em;
+        @include span-columns(4);
+        @include omega(2n);
+        .preview {
+            display: none;
+        }
+        &.news, &.event {
+            &:after {
+                display: none;
+            }
+        }
+        @media only screen and (min-width: 580/16*1em) {
+            font-size: 100%;
+            height: 400/16*1em;
+            .preview {
+                display: block;
+            }
+            &.news, &.event {
+            &:after {
+                    display: block;
                 }
             }
-            &:hover {
-                background: $web-sky-blue;
-            }
+        }
+        @media only screen and (min-width: 1000/16*1em) {
+            @include omega-reset(2n);
+            @include span-columns(3 of 12);
+            @include omega(4n);
         }
     }
 }
-
-
 
 /*
  * Homepage nav
